--- a/forum/src/main/resources/templates/forum.html
+++ b/forum/src/main/resources/templates/forum.html
@@ -4,9 +4,12 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
 		<link rel="stylesheet" href="css/forum.css" />
-
+		<!-- 
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+		 -->
+ 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.js"></script>
 		<script src="scripts/script.js"></script>
 	</head>
 
